# people_places

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
Notebooks/: Apartments.ipynb  Buildings.ipynb  Census_Processing.py  Demographics.ipynb  Families.ipynb  Families1.ipynb  Households1.ipynb  Population.ipynb  agg_clusters_clrd.ipynb  census_processing.py  cluster_stats.py  clusters.ipynb  get_data.ipynb  process_geodataframe.ipynb
Notebooks/2022/: foreigner_exploration.ipynb  process_rent.ipynb
Notebooks/czechia/: census_cleaning.ipynb  census_data_exploration.ipynb  census_nadzsjd.ipynb  census_preprocessing.ipynb  census_zsj_d.ipynb  col_names.csv  column_names_with_files.csv
Notebooks/statistics/: random_forest.ipynb  random_forest_raw.ipynb
code/: clusters.py  spatial_autocorrelation.py
core/: __init__.py
core/gw/: __init__.py  bandwidth_search.py  base.py  ensemble.py  linear_model.py
notebooks/: census_data_exploration.ipynb  census_preprocessing.ipynb  dimensionality_reduction_interpretation.ipynb  dr_education.ipynb  merge_census.ipynb  name_extraction.ipynb  rename_cols.ipynb
notebooks/01_census_processing/: 01_census_preprocessing.ipynb  02_name_extraction.ipynb  03_census_cleaning.ipynb  03_census_polygons.ipynb  03_foreigners_polygons.ipynb  04_census_polygons.ipynb  05_link_clusters.ipynb  06_data_modification.ipynb  07_merge_census.ipynb  column_names2.csv  merge_census.ipynb  name_extraction.ipynb  plot_urban_form.ipynb  urban_form_plotting.ipynb
notebooks/02_dimensionality_reduction/: data_modification.ipynb  fa.ipynb  loadings_fa.txt  loadings_pca.txt  pca.ipynb  pca_batch.ipynb  rf.ipynb
notebooks/03_gw_modelling/: combine_data.ipynb  comparison_importances.ipynb  fa.ipynb  no_dr.ipynb  pca.ipynb  umap.ipynb
notebooks/archive/: Apartments.ipynb  Buildings.ipynb  Demographics.ipynb  Families.ipynb  Families1.ipynb  Households.ipynb  Households1.ipynb  Population.ipynb  agg_clusters.ipynb  agg_clusters_clrd.ipynb  census_processing.py  cluster_exploration.ipynb  cluster_stats.py  clusters.ipynb  get_data.ipynb  plot_demographics.ipynb  process_geodataframe.ipynb  spatial_autocorrelation.ipynb
notebooks/census_processing/: 02_census_cleaning.ipynb  03_census_polygons.ipynb  Prague_extraction.ipynb  census_cleaning.ipynb  census_data_exploration.ipynb  census_polygons.ipynb  (+4 more)
people_places_germany/: clusters.ipynb  notes.txt
(+903 files in other folders)
