[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "core"
dynamic = ["version"]
license = { text = "BSD 3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["core", "core.*"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = ["N803", "N806"] # name {} should be lowercase

[tool.ruff.lint.per-file-ignores]
 "*__init__.py" = [
     "F401",  # imported but unused
     "F403",  # star import; unable to detect undefined names
 ]
 "*.ipynb" = [
    "C408",  # Unnecessary `dict` call
    "E501",  # Line too long
    "F401",  # imported but unused
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "uscuni",
  "first-party",
  "local-folder",
  "testing"
]

[tool.ruff.lint.isort.sections]
"uscuni" = ["gwlearn", "neatnet"]

[tool.coverage.run]
source = ["./core"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["core/tests/*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
geopandas = ">=1.0.1,<2"
lonboard = "<0.10"
libpysal = ">=4.12.1,<5"
numpy = ">=2.0.2,<3"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.9.3,<4"
jupyterlab = ">=4.3.2,<5"
glasbey = ">=0.2.1,<0.3"
sidecar = ">=0.7.0,<0.8"
pyarrow = ">=18.1.0,<19"
palettable = ">=3.3.3,<4"
seaborn = ">=0.13.2,<0.14"
geopy = ">=2.4.1,<3"
esda = ">=2.6.0,<3"
tqdm = ">=4.67.1,<5"
openpyxl = ">=3.1.5,<4"
pre-commit = ">=4.1.0,<5"
ruff = ">=0.9.6,<0.10"
geodatasets = ">=2024.8.0,<2025"
imbalanced-learn = ">=0.13.0,<0.14"
tabulate = ">=0.9.0,<0.10"

[tool.pixi.pypi-dependencies]
core = { path = ".", editable = true }
gwlearn = { git = "https://github.com/uscuni/gwlearn.git" }
